--- a/CMS/CMS/CMS/TabelarniPrikaz.xaml
+++ b/CMS/CMS/CMS/TabelarniPrikaz.xaml
@@ -29,7 +29,7 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="50">
-                                <CheckBox x:Name="CheckBoxBrisanje" IsChecked="False"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <CheckBox x:Name="CheckBoxBrisanje"  HorizontalAlignment="Center" VerticalAlignment="Center" Checked="CheckBoxBrisanje_Checked" Unchecked="CheckBoxBrisanje_Checked"/>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -40,7 +40,8 @@
                         <DataTemplate>
                             <StackPanel Height="50" Width="120">
                                 <Label Height="25" Margin="20 10 20 0" Name="label1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <Hyperlink Click="Hyperlink_Click_1">Clik!
+                                    <Hyperlink x:Name="HyperlinkBrend" Click="Hyperlink_Click_1" CommandParameter="{Binding}">
+                                        <TextBlock Text="{Binding Path=Brend}"/>
                                     </Hyperlink>
                                 </Label>
                             </StackPanel>
