--- a/CMS/CMS/CMS/IzmjenaWindow.xaml
+++ b/CMS/CMS/CMS/IzmjenaWindow.xaml
@@ -11,10 +11,10 @@
         <ImageBrush ImageSource="prsten.jpg"/>
     </Window.Background>
 
-    <Window.CommandBindings>
+    <!--<Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Open" Executed="Open_Executed"/>
         <CommandBinding Command="ApplicationCommands.Save" Executed="Save_Executed"/>
-    </Window.CommandBindings>
+    </Window.CommandBindings>-->
     <Grid Margin="26,10,24.6,10" Background="#7F294B48">
         <Grid.RowDefinitions>
             <RowDefinition Height="352*"/>
@@ -52,28 +52,19 @@
         <ComboBox x:Name="ComboBoxCena" Margin="503,65,11,259" Height="28" Width="229"/>
         <Label x:Name="labelSlika" Content="SLIKA:" HorizontalAlignment="Right" Height="28" Margin="0,143,209,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
         <Button x:Name="buttonSlika" Content = "UBACI:" Width="70" Height="30" Margin="503,151,170,171" Click="buttonSlika_Click" />
-        <Image x:Name="image" HorizontalAlignment="Right" Height="63" Margin="0,135,17,0" VerticalAlignment="Top" Width="74"/>
+        <Image x:Name="image" HorizontalAlignment="Right" Height="63" Margin="0,140,46,0" VerticalAlignment="Top" Width="74"/>
         <Label x:Name="labelaCenaGreska" Content="" Width="229" Margin="0,98,11,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
         <Button x:Name="DugmeZaSlanje" Content="Izmjena" Margin="418,74,255,44.8" Width="70" Height="30" Click="Izmjena_Click" Grid.Row="1"/>
         <Label x:Name="Brend" HorizontalAlignment="Left" Content="BREND:" Margin="0,198,0,0" VerticalAlignment="Top" Width="74" FontWeight="Bold"/>
         <TextBox x:Name="textBoxBrend" HorizontalAlignment="Left" Height="28" Margin="50,198,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229"  Background="#FFDDDADA"/>
         <Label x:Name="labelaBrendGreska" Content="" Width="129" Margin="0,197,330,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
         <Label x:Name="Opis" Content="OPIS:"  HorizontalAlignment="Left" Margin="10,293,0,0" VerticalAlignment="Top" Width="74" FontWeight="Bold"/>
+        <Label x:Name="labelaRtbGreska" Content="" Width="229" Margin="0,29,330,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" RenderTransformOrigin="0.501,0.5" Grid.Row="1"/>
 
         <Canvas Width="230" Height="200" Margin="49,256,466,44.8" Grid.RowSpan="2">
             <DockPanel Width="421" Height="234" Grid.RowSpan="2" Canvas.Left="-38" Canvas.Top="-22">
                 <ToolBar Width="388" Background="Transparent" Margin="0,10,0,176.6" RenderTransformOrigin="0.5,0.5">
-                    <Button x:Name="buttonOpen" BorderBrush="Transparent" Command="ApplicationCommands.Open" Content="" Height="20" Width="20" Canvas.Left="10" Canvas.Top="-22">
-                        <Button.Background>
-                            <ImageBrush ImageSource="Images/open.png" Stretch="UniformToFill"/>
-                        </Button.Background>
-                    </Button>
-                    <Button x:Name="buttonSave" BorderBrush="Transparent" Command="ApplicationCommands.Save" Content="" Height="20" Width="20" RenderTransformOrigin="1.68,0.3" Margin="10 0 0 0">
-                        <Button.Background>
-                            <ImageBrush ImageSource="Images/save.png"/>
-                        </Button.Background>
-
-                    </Button>
+                 
                     <ToggleButton Command="EditingCommands.ToggleBold" x:Name="btnBold" Content="" FontSize="20" Height="20" Margin="0,-3,0,4.8" Width="40" Checked="btnBold_Checked" Foreground="Black">
                         <ToggleButton.Background>
                             <ImageBrush ImageSource="Images/bold.png" Opacity="0.5" Stretch="Uniform"/>
@@ -108,49 +99,5 @@
 
         </Canvas>
     </Grid>
-    <!--<Window.Background>
-        <ImageBrush ImageSource="prsten.jpg"/>
-    </Window.Background>
-    <Grid Height="350" Margin="56,40,78,56" Background="#7F294B48">
-
-        <Label x:Name="labelId" Content="ID:" HorizontalAlignment="Left" Height="28" Margin="10,24,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <TextBox x:Name="textBoxId" HorizontalAlignment="Left" Height="28" Margin="50,19,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229" Background="#FFDDDADA"/>
-        <Label x:Name="labelaIdGreska" Content="" Width="229" Margin="50,52,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
-        <Label x:Name="labelMetal" Content="METAL:" HorizontalAlignment="Left" Height="28" Margin="0,89,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <ComboBox x:Name="comboBoxMetal" Height="28" Width="229" Margin="50,84,380.6,238"/>
-        <Label x:Name="labelaMetalGreska" Content="" Width="229" Margin="50,112,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
-        <Label x:Name="labelDatum" Content="DATUM:" HorizontalAlignment="Left" Height="28" Margin="0,190,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <DatePicker x:Name="DatePicker" HorizontalAlignment="Left" Height="28" Margin="50,191,0,0" VerticalAlignment="Top" Width="116" />
-        <Label x:Name="labelaDateGreska" Content="" Width="229" Margin="50,168,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
-        <Label x:Name="labelBoja" Content="BOJA:" HorizontalAlignment="Left" Height="28" Margin="0,140,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <ComboBox x:Name="comboBoxBoja" Height="28" Width="229" Margin="50,140,380.6,182">
-            <ComboBox.Background>
-                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                    <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                    <GradientStop Color="#FFF4EFEF" Offset="1"/>
-                </LinearGradientBrush>
-            </ComboBox.Background>
-        </ComboBox>
-
-
-        <Label x:Name="labelaBojaGreska" Content="" Width="229" Margin="50,218,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
-        <Label x:Name="labelOblikKamena" Content="OblikKamena:" HorizontalAlignment="Left" Height="28" Margin="315,19,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <ComboBox x:Name="comboBoxOblikKamena" Height="28" Width="229" Margin="420,19,10.6,303"/>
-
-
-        <Label x:Name="labelaOblikKamenaGreska" Content="" Width="229" Margin="0,52,10.6,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
-
-        <Label x:Name="labelCena" Content="Cena:" HorizontalAlignment="Left" Height="28" Margin="315,84,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <CheckBox x:Name="CheckBoxCena" Margin="420,84,142.6,243" Content="10.000-20.000"/>
-        <CheckBox x:Name="CheckBoxCena1" Margin="420,116,142.6,211" Content="20.000-50.000"/>
-        <Label x:Name="labelaCenaGreska" Content="" Width="229" Margin="0,139,0.6,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
-        <Label x:Name="labelSlika" Content="SLIKA:" HorizontalAlignment="Right" Height="28" Margin="0,171,228.6,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <Image x:Name="image" HorizontalAlignment="Right" Height="63" Margin="0,155,36.6,0" VerticalAlignment="Top" Width="74"/>
-        <Button x:Name="buttonSlika" Content = "UBACI:" Width="70" Height="30" Margin="420,171,169.6,149" Click ="buttonSlika_Click" />
-
-        <Button x:Name="DugmeZaSlanje" Content="Izmjena" Margin="297,283,292.6,37" Width="70" Height="30" Click="Izmjena_Click"/>
-        <Label x:Name="Brend" HorizontalAlignment="Left" Content="BREND:" Margin="0,245,585.6,0" VerticalAlignment="Top" Width="74" FontWeight="Bold"/>
-        <TextBox x:Name="textBoxBrend" HorizontalAlignment="Left" Height="28" Margin="50,243,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229" Background="#FFDDDADA"/>
-        <Label x:Name="labelaBrendGreska" Content="" Width="229" Margin="0,276,380.6,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
-    </Grid>-->
+   
 </Window>
