--- a/CMS/CMS/CMS/FormaWindow.xaml
+++ b/CMS/CMS/CMS/FormaWindow.xaml
@@ -7,60 +7,69 @@
         mc:Ignorable="d"
         Title="FormaWindow" Height="550" Width="800">
     <Window.Background>
-        <ImageBrush ImageSource="prsten.jpg"/>
+        <ImageBrush ImageSource="Images/background5.jpg"/>
     </Window.Background>
 
-    <Grid Margin="26,10,24.6,10" Background="#7F294B48">
+    <Grid Margin="26,10,24.6,10" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="352*"/>
             <RowDefinition Height="149*"/>
         </Grid.RowDefinitions>
 
-        <Label x:Name="labelId" Content="ID:" HorizontalAlignment="Left" Height="28" Margin="0,10,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <TextBox x:Name="textBoxId" HorizontalAlignment="Left" Height="28" Margin="50,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229" GotFocus="textBoxId_GotFocus" LostFocus="textBoxId_LostFocus" Background="#FFDDDADA"/>
-        <Label x:Name="labelaIdGreska" Content="" Width="229" Margin="50,43,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
-        <Label x:Name="labelMetal" Content="METAL:" HorizontalAlignment="Left" Height="28" Margin="0,75,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <ComboBox x:Name="comboBoxMetal" Margin="50,75,464,244"/>
-        <Label x:Name="labelaMetalGreska" Content="" Width="229" Margin="50,108,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
+        <Label x:Name="labelId" Content="ID:" HorizontalAlignment="Left" Height="28" Margin="0,71,0,0" VerticalAlignment="Top" Width="61" FontWeight="Bold" FontFamily="Segoe Print"/>
+        <TextBox x:Name="textBoxId" HorizontalAlignment="Left" Height="28" Margin="66,71,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="195" GotFocus="textBoxId_GotFocus" LostFocus="textBoxId_LostFocus" Background="#FFE5E5E5"/>
+        <Label x:Name="labelaIdGreska" Content="" Width="195" Margin="66,99,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10" FontFamily="Segoe Print"/>
+        <Label x:Name="labelMetal" Content="METAL:" HorizontalAlignment="Left" Height="28" Margin="0,131,0,0" VerticalAlignment="Top" Width="61" FontWeight="Bold" FontFamily="Segoe Print"/>
+        <ComboBox x:Name="comboBoxMetal" Margin="66,131,482,188"/>
+        <Label x:Name="labelaMetalGreska" FontFamily="Segoe Print" Content="" Width="195" Margin="66,164,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
 
-        <Label x:Name="labelBoja" Content="BOJA:" HorizontalAlignment="Left" Height="28" Margin="0,140,0,0" VerticalAlignment="Top" Width="50" FontWeight="Bold"/>
-        <ComboBox x:Name="comboBoxBoja" Margin="50,140,464,181">
+        <Label x:Name="labelBoja" FontFamily="Segoe Print" Content="BOJA:" HorizontalAlignment="Left" Height="28" Margin="0,196,0,0" VerticalAlignment="Top" Width="61" FontWeight="Bold"/>
+        <ComboBox x:Name="comboBoxBoja" Margin="66,196,482,125">
             <ComboBox.Background>
                 <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                     <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                    <GradientStop Color="#FFF4EFEF" Offset="1"/>
+                    <GradientStop Color="#FFE5E5E5" Offset="1"/>
                 </LinearGradientBrush>
             </ComboBox.Background>
         </ComboBox>
 
 
-        <Label x:Name="labelaBojaGreska" Content="" Width="229" Margin="50,171,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
-        <Label x:Name="labelOblikKamena" Content="OBLIK:" HorizontalAlignment="Left" Height="28" Margin="418,10,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <ComboBox x:Name="comboBoxOblikKamena" Height="28" Width="229" Margin="503,10,11,314"/>
+        <Label x:Name="labelaBojaGreska" FontFamily="Segoe Print" Content="" Width="195" Margin="66,227,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="27" FontSize="10"/>
+        <Label x:Name="labelOblikKamena" FontFamily="Segoe Print" Content="OBLIK:" HorizontalAlignment="Left" Height="28" Margin="0,310,0,0" VerticalAlignment="Top" Width="61" FontWeight="Bold" Grid.RowSpan="2"/>
+        <ComboBox x:Name="comboBoxOblikKamena" Height="28" Margin="66,310,482,0"/>
 
 
-        <Label x:Name="labelaOblikKamenaGreska" Content="" Width="229" Margin="0,38,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
+        <Label x:Name="labelaOblikKamenaGreska" FontFamily="Segoe Print" Content="" Width="195" Margin="0,2,482,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" Grid.Row="1"/>
 
-        <Label x:Name="labelCena" Content="CENA:" HorizontalAlignment="Left" Height="28" Margin="418,65,0,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
+        <Label x:Name="labelCena" Content="CENA:" FontFamily="Segoe Print" HorizontalAlignment="Left" Height="28" Margin="0,28,0,0" VerticalAlignment="Top" Width="61" FontWeight="Bold" Grid.Row="1"/>
 
-        <ComboBox x:Name="ComboBoxCena" Margin="503,65,11,259" Height="28" Width="229"/>
-        <Label x:Name="labelSlika" Content="SLIKA:" HorizontalAlignment="Right" Height="28" Margin="0,143,209,0" VerticalAlignment="Top" Width="116" FontWeight="Bold"/>
-        <Button x:Name="buttonSlika" Content = "UBACI:" Width="70" Height="30" Margin="503,151,170,171" Click="buttonSlika_Click" />
-        <Image x:Name="image" HorizontalAlignment="Right" Height="63" Margin="0,135,17,0" VerticalAlignment="Top" Width="74"/>
-        <Label x:Name="labelaCenaGreska" Content="" Width="229" Margin="0,98,11,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" RenderTransformOrigin="0.501,0.5"/>
-        <Button x:Name="DugmeZaSlanje" Content="Posalji" Margin="418,74,255,44.8" Width="70" Height="30" Click="DugmeZaSlanje_Click" Grid.Row="1"/>
-        <Label x:Name="Brend" HorizontalAlignment="Left" Content="BREND:" Margin="0,198,0,0" VerticalAlignment="Top" Width="74" FontWeight="Bold"/>
-        <TextBox x:Name="textBoxBrend" HorizontalAlignment="Left" Height="28" Margin="50,198,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229" GotFocus="textBoxId_GotFocus" LostFocus="textBoxId_LostFocus" Background="#FFDDDADA"/>
-        <Label x:Name="labelaBrendGreska" Content="" Width="129" Margin="0,197,330,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
-        <Label x:Name="Opis" Content="OPIS:"  HorizontalAlignment="Left" Margin="10,293,0,0" VerticalAlignment="Top" Width="74" FontWeight="Bold"/>
-        <Label x:Name="labelaSlikaGreska" Content="" Width="229" Margin="0,203,17,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" RenderTransformOrigin="0.501,0.5"/>
-        <Label x:Name="labelaRtbGreska" Content="" Width="229" Margin="0,29,330,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" RenderTransformOrigin="0.501,0.5" Grid.Row="1"/>
+        <ComboBox x:Name="ComboBoxCena" Margin="66,30,482,86.8" Height="28" Grid.Row="1"/>
+        <Label x:Name="labelSlika" FontFamily="Segoe Print" Content="SLIKA:" HorizontalAlignment="Right" Height="28" Margin="0,34,385,0" VerticalAlignment="Top" Width="54" FontWeight="Bold" Grid.Row="1"/>
+        <Button x:Name="buttonSlika" FontFamily="Segoe Print" Content = "UBACI:" Margin="354,32,318,87.8" Click="buttonSlika_Click" RenderTransformOrigin="0.5,0.5" Grid.Row="1" >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="-2.748"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.552"/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+        <Image x:Name="image" HorizontalAlignment="Right" Height="120" Margin="0,324,10,0" VerticalAlignment="Top" Width="120" Grid.RowSpan="2"/>
+        <Label x:Name="labelaCenaGreska" FontFamily="Segoe Print" Content="" Width="200" Margin="0,62,482,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" RenderTransformOrigin="0.501,0.5" Grid.Row="1"/>
+        <Button x:Name="DugmeZaSlanje" Content="Posalji" Margin="234,110,250,-0.2" Height="30" Click="DugmeZaSlanje_Click" Grid.Row="1" FontFamily="Segoe Print"/>
+        <Label x:Name="Brend" FontFamily="Segoe Print" HorizontalAlignment="Left" Content="BREND:" Margin="0,259,0,60" Width="61" FontWeight="Bold"/>
+        <TextBox x:Name="textBoxBrend" HorizontalAlignment="Left" Height="28" Margin="66,257,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="195" GotFocus="textBoxId_GotFocus" LostFocus="textBoxId_LostFocus" Background="#FFE5E5E5"/>
+        <Label x:Name="labelaBrendGreska" FontFamily="Segoe Print" Content="" Width="195" Margin="0,285,482,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10"/>
+        <Label x:Name="Opis" Content="OPIS:" FontFamily="Segoe Print"  HorizontalAlignment="Left" Margin="299,71,0,0" VerticalAlignment="Top" Width="54" FontWeight="Bold"/>
+        <Label x:Name="labelaSlikaGreska" FontFamily="Segoe Print" Content="" Width="229" Margin="0,62,156,0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" RenderTransformOrigin="0.501,0.5" Grid.Row="1"/>
+        <Label x:Name="labelaRtbGreska" FontFamily="Segoe Print" Content="" Width="229" VerticalAlignment="Top" HorizontalAlignment="Right" Height="27" FontSize="10" RenderTransformOrigin="0.501,0.5" Margin="0,276,10,0"/>
 
 
 
-        <Canvas Width="230" Height="200" Margin="49,256,466,44.8" Grid.RowSpan="2">
-            <DockPanel Width="421" Height="234" Grid.RowSpan="2" Canvas.Left="-38" Canvas.Top="-22">
-                <ToolBar Width="388" Background="Transparent" Margin="0,10,0,176.6" RenderTransformOrigin="0.5,0.5">
+        <Canvas Margin="358,71,10,43">
+            <DockPanel Width="375" Height="234" Grid.RowSpan="2" Background="#33000000">
+                <ToolBar Width="372" Background="#FFF9F7F5" Margin="0,10,0,190.6" RenderTransformOrigin="0.5,0.5">
 
                     <ToggleButton Command="EditingCommands.ToggleBold" x:Name="btnBold" Content="" FontSize="20" Height="20" Margin="0,-3,0,4.8" Width="40" Checked="btnBold_Checked" Foreground="Black">
                         <ToggleButton.Background>
@@ -78,23 +87,24 @@
                         </ToggleButton.Background>
                     </ToggleButton>
                     <Separator/>
-                    <ComboBox x:Name="cmbFontFamily" Width="125" IsEditable="True" SelectionChanged="cmbFontFamily_SelectionChanged" Margin="0,10,0,17" Height="17" FontSize="10" BorderThickness="2" RenderTransformOrigin="0.181,0.744"/>
+                    <ComboBox x:Name="cmbFontFamily" Width="125" IsEditable="True" SelectionChanged="cmbFontFamily_SelectionChanged" Margin="0,5,0,5" Height="17" FontSize="10" BorderThickness="2"/>
                     <ComboBox x:Name="cmbFontSize" Opacity="1" Width="40" IsReadOnly="False" IsEditable="True" TextBoxBase.TextChanged="cmbFontSize_TextChanged" Height="5" Margin="10,4,0,10" FontSize="12" BorderThickness="2" RenderTransformOrigin="0.181,0.744">
 
                     </ComboBox>
                     <Button x:Name="btnColor" Content="A" Click="btnColor_Click" Width="20" Height="25" RenderTransformOrigin="-0.914,-0.855" Margin="10,0,0,7.4" FontWeight="Bold" Background="Gray"/>
                 </ToolBar>
-                <RichTextBox x:Name="rtbEditor" SelectionChanged="rtbEditor_SelectionChanged" Background="Transparent" BorderBrush="{x:Null}" CaretBrush="White" Width="342"  Margin="-340,62,25,99.6"/>
+                <RichTextBox x:Name="rtbEditor" SelectionChanged="rtbEditor_SelectionChanged" Background="#FFF9F7F5" BorderBrush="{x:Null}" CaretBrush="White" Width="316"  Margin="-340,62,25,41.6"/>
 
             </DockPanel>
-            <StatusBar x:Name="stbStatus" Height="33" Canvas.Left="51" Canvas.Top="157" Width="60">
-                <StatusBarItem Margin="0,0,0,-0.2" Width="60" Height="33" VerticalAlignment="Top">
-                    <TextBlock x:Name="WordNumber" Background="Transparent"  FontSize="18"/>
+            <StatusBar x:Name="stbStatus" Height="23" Canvas.Left="61" Canvas.Top="205" Width="60">
+                <StatusBarItem Width="60" Height="23" VerticalAlignment="Top">
+                    <TextBlock x:Name="WordNumber" Background="Transparent"  FontSize="14"/>
                 </StatusBarItem>
             </StatusBar>
-            <Label x:Name="labelWords" Content="Words:" Height="33" Canvas.Top="157" Width="51" FontSize="12" Canvas.Left="-38"/>
+            <Label x:Name="labelWords" FontFamily="Segoe Print" Content="Words:" Height="30" Canvas.Top="198" Width="51" FontSize="12" Canvas.Left="5"/>
 
         </Canvas>
+        <TextBlock Text="Kreiraj prsten" Margin="220,0,300,313" FontSize="22" VerticalAlignment="Center" HorizontalAlignment="Center" Height="39" Width="219" FontFamily="Segoe Print"/>
     </Grid>
 
 </Window>
